+ added ShooterPlayerController to add GameHasEnded

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/Sandbox.Sandbox
 EditorStartupMap=/Game/Maps/Sandbox.Sandbox
-GlobalDefaultGameMode=/Game/Blueprints/GameModes/BP_ShooterGameMode.BP_ShooterGameMode_C
+GlobalDefaultGameMode=/Game/Blueprints/GameModes/BP_KillEmAllGameMode.BP_KillEmAllGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
